# intel-qs

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  basic_code_for_scaling.cpp  package-lock.json  run-single-node-performance.mjs  script_precision.sh  script_strong_scaling.sh  script_weak_scaling.sh  single_node_performance.cpp  specv2_bench.cpp  visualize-single-node-performance.py
benchmarks/output/2022-06-14_single_node_performance/: single_node_performance.csv
benchmarks/output/2022-06-23_single_node_performance/: single_node_performance.csv
benchmarks/output/2022-08-23_09-24-24_single_node_performance/: single_node_performance.csv  single_node_performance_with_papi.csv
benchmarks/output/2022-08-23_09-24-24_single_node_performance/papi_hl_output/: rank_328914.json
benchmarks/output/2022-09-17_12-54-57_basic_strong_scaling/: basic_strong_scaling_first_q10_p0.txt  basic_strong_scaling_first_q10_p1.txt  basic_strong_scaling_first_q10_p2.txt  basic_strong_scaling_last_q10_p0.txt  basic_strong_scaling_last_q10_p1.txt  basic_strong_scaling_last_q10_p2.txt  basic_strong_scaling_q10_n1_p0.txt  basic_strong_scaling_q10_n1_p1.txt  basic_strong_scaling_q10_n1_p2.txt  basic_strong_scaling_q10_n2_p0.txt  basic_strong_scaling_q10_n2_p1.txt  basic_strong_scaling_q10_n2_p2.txt  basic_strong_scaling_q10_n4_p0.txt  basic_strong_scaling_q10_n4_p1.txt  basic_strong_scaling_q10_n4_p2.txt
benchmarks/output/2022-10-31_07-55-48_single_node_performance/: single_node_performance.csv  single_node_performance_with_papi.csv
benchmarks/output/2022-10-31_07-55-48_single_node_performance/papi_hl_output/: rank_a8oMgq
benchmarks/output/2022-11-18_14-44-06_single_node_performance/: single_node_performance.csv  single_node_performance_with_papi.csv
benchmarks/output/2022-11-18_14-44-06_single_node_performance/papi_hl_output/: rank_JWbDlY
benchmarks/output/2022-11-23_20-39-53_single_node_performance/: single_node_performance.csv  single_node_performance_with_papi.csv
benchmarks/output/2022-11-23_20-39-53_single_node_performance/papi_hl_output/: rank_7tR5Xv
cmake/: ExternalProject.cmake  FindPAPI.cmake  Finduniversal.cmake
examples/: benchgates.cpp  circuit_with_noise_gates.cpp  communication_reduction_via_qubit_reordering.cpp  expect_value_test.cpp  grover_4qubit.cpp  heisenberg_dynamics.cpp  noise_via_chi_matrix.cpp  quantum_fourier_transform.cpp  test_of_custom_gates.cpp
include/: NoisyQureg.hpp  QubitRegisterMetric.hpp  chi_matrix.hpp  mpi_utils.hpp  qaoa_features.hpp  qureg.hpp  rng_utils.hpp  spec_kernels.hpp  timer.hpp  utils.hpp
interface/src/: intelqs_interface_main.cpp  interface_api_memory.cpp  interface_api_qasm.cpp
pybind11/: intelqs_py.cpp
src/: CMakeLists.txt  chi_matrix.cpp  highperfkernels.cpp  mpi_env.cpp  qaoa_features.cpp  qureg_apply1qubitgate.cpp  qureg_apply2qubitgate.cpp  qureg_apply_channel.cpp  qureg_applyctrl1qubitgate.cpp  qureg_applydiag.cpp  qureg_applyswap.cpp  qureg_applytoffoli.cpp  qureg_expectval.cpp  qureg_fusion.cpp  qureg_init.cpp  qureg_measure.cpp  qureg_noisysimul.cpp  qureg_permute.cpp  qureg_utils.cpp  rng_utils.cpp  spec_kernels.cpp  utils.cpp
tutorials/: get_started_with_IQS.cpp  get_started_with_noisy_IQS.cpp
unit_test/: mpi_speedup_test.cpp  openmp_test.cpp  suite_of_tests.cpp
unit_test/include/: apply_1q_gate_test.hpp  apply_swap_gate_test.hpp  chi_matrix_test.hpp  chunking_communication_test.hpp  expectation_values_test.hpp  gate_counter_test.hpp  measure_test.hpp  multiple_states_test.hpp  noisy_simulation_test.hpp  one_qubit_register_test.hpp  permutation_test.hpp  qaoa_features_test.hpp  qureg_apply_channel.hpp  qureg_permute_test.hpp  random_number_generator_test.hpp  single_qubit_gates_test.hpp  state_initialization_test.hpp  tinymatrix_test.hpp  two_qubit_register_test.hpp  utility_methods_test.hpp
util/BigMPI/m4/: aclocal_cache.m4  aclocal_cc.m4  aclocal_f77.m4  aclocal_fc.m4  aclocal_romio.m4
util/BigMPI/src/: type_contiguous_x.c
util/BigMPI/test/: test_allreduce_x.c  test_contig_x.c  test_factorize.c  test_reduce_x.c  test_rma2_x.c  test_rma_x.c  verify_buffer.h
util/BigMPI/test/perf/: reductions.c  typecontig.c  typepiggy.c
util/tests/: alignedallocator_test.cpp  blas_test.cpp  naive_integral_base.cpp
